# Rust-Spray

./: .dockerignore  .gitignore  .gitmodules  ACTIVE_DEBUGGING_SESSION.md  ADDITIONAL_WORKFLOW_ISSUES.md  AGENTS.md  ARM_CROSS_COMPILATION_DEBUG.md  ARM_CROSS_COMPILATION_FIXES.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPILATION_READY.md  CONTACT_NICHOLASBASS_EMAIL.md  CRITICAL_ERRORS_FIXED.md  CROSS_INSTALL_TEMPLATE.txt  Cargo.toml  Cross.toml  DOCKERFILE_FIXES.md  DOCKER_PATH_FIX.md  DOCKER_REFERENCE.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.armv7-opencv  Dockerfile.cross  Dockerfile.cross-aarch64  Dockerfile.pi-opencv  Dockerfile.pi-opencv-armv7  Dockerfile.zig  ENHANCED_GITHUB_ACTIONS_DEBUGGING.md  FINAL_PROJECT_STATUS.md  FINAL_WORKFLOW_VALIDATION.md  FORMATTING_FIXES.md  FORMATTING_FIXES_COMPLETE.md  GITHUB_ACTIONS_DEBUGGING.md  GITHUB_ACTIONS_QUICK_REFERENCE.md  INTEGRATION.md  Makefile  README.md  SSH_SETUP.md  VS_CODE_EXTENSIONS.md  WORKFLOW_ANALYSIS.md  (+16 more)
.cargo/: config.toml
.github/workflows/: Windows.yml  build-aarch64.yml  build.yml  ci.yml  cross-aarch64.yml  deb-release.yml  docker  docker-publish.yml  docker.yaml  pr.yml  release.yml  test.yml  yocto.yml
.trunk/: trunk.yaml
config/: Config.toml  rustspray.toml
deploy/: rustspray.service
docker/: Dockerfile.aarch64  Dockerfile.armv7  aarch64-opencv.dockerfile
docs/: README.md  yocto.md
examples/: basic_usage.rs  four_lane.rs  open_weed_locator.rs
kernel/: Cargo.toml  Makefile  linker.ld  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/boot/: README.md  config.txt
kernel/src/: boot.rs  console.rs  exceptions.rs  main.rs  mmio.rs  panic.rs  shell.rs  timer.rs  uart.rs
owl/: README.md
owl/detectors/: __init__.py  rustspray_detector.py
scripts/: README.md  build-matrix.sh  ci-local.bat  ci-local.ps1  ci-local.sh  cross-build.sh  deploy.sh  docker-run.ps1  docker-run.sh  install.sh  rustspray-camera.sh  toolchain-build.sh  train_model.py
src/: camera.rs  camrea.rs  config.rs  detection.rs  error.rs  exg.rs  ffi.rs  gps.rs  io_gpio.rs  ipc.rs  lanes.rs  lib.rs  logging.rs  main.rs  model.rs  onnx_detection.rs  picam.rs  pipeline.rs  spray.rs  vision.rs  watchdog.rs
src/utils/: GreenOnBrown.rs  algorithms.rs  mod.rs
tests/: config_tests.rs  integration_tests.rs  ipc.rs  opencv_link.rs  pipeline.rs  test_rustspray_detector.py  weed_locator_tests.rs
wiki/: Home.md  Installation.md  Troubleshooting.md  Wiring.md
xtask/src/: main.rs
yocto/: README.md
yocto/meta-rust-spray/conf/: layer.conf
yocto/meta-rust-spray/recipes-apps/rust-spray/: rust-spray.bb
yocto/meta-rust-spray/recipes-connectivity/openssl/: openssl_%.bbappend
yocto/meta-rust-spray/recipes-images/: rust-spray-image.bb
