[package]
name = "rustspray"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "SIMD-accelerated vegetation detection and spray control for Raspberry Pi"

[dependencies]
bytemuck = { version = "1.15", features = ["extern_crate_alloc"] }
crossbeam = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
ctrlc = { version = "3.4", features = ["termination"] }

[target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]
rppal = { version = "0.17", optional = true }

[dependencies.nokhwa]
version = "0.10"
optional = true
default-features = false
features = ["input-v4l"]

[dependencies.gstreamer]
version = "0.21"
optional = true
default-features = false
features = ["v1_20"]

[features]
default = []
rpi = ["rppal"]
camera-gstreamer = ["gstreamer"]
camera-nokhwa = ["nokhwa"]

[[bin]]
name = "rustspray"
path = "src/main.rs"

[[example]]
name = "four_lane"
path = "examples/four_lane.rs"
